--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -90,7 +90,10 @@
 
     <body>
 
-        <h1> Aprendizaje profundo <br> (con brain.js) </h1>
+        <div>
+
+            <h1> Aprendizaje profundo <br> (con brain.js) </h1>
+        </div>
 
         <h2> Selecciona un color: </h2>
 
