--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -42,7 +42,6 @@
 
             h1{
                 font-size: 2em;
-                margin-bottom: 100px;
                 color: #baf;
                 filter: drop-shadow(0px 0px 2px #000) drop-shadow(0px 0px 4px #baf);
             }
@@ -85,12 +84,16 @@
                 display: none;
                 width: 25%;
             }
+
+            #demo{
+                width: 100%;
+            }
         </style>
     </head>
 
     <body>
 
-        <div>
+        <div style="margin-bottom: 100px;border: 2px solid #fff;border-radius: 2px;">
 
             <h1> Aprendizaje profundo <br> (con brain.js) </h1>
         </div>
