--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -37,6 +37,9 @@
             }
 
             body{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
                 text-align: center;
             }
 
