--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -45,6 +45,7 @@
 
             h1{
                 font-size: 2em;
+                padding: 20px;
                 color: #baf;
                 filter: drop-shadow(0px 0px 2px #000) drop-shadow(0px 0px 4px #baf);
             }
@@ -96,7 +97,7 @@
 
     <body>
 
-        <div style="margin-bottom: 100px;border: 2px solid #fff;border-radius: 2px;">
+        <div style="background: #505967;margin-bottom: 100px;border: 2px solid #fff;border-radius: 2px;">
 
             <h1> Aprendizaje profundo <br> (con brain.js) </h1>
         </div>
