Minor style improvement

--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -97,7 +97,7 @@
 
     <body>
 
-        <div style="background: #505967;margin: 20px 0 100px;border: 2px solid #fff;border-radius: 2px;">
+        <div style="background: #505967;margin: 20px 0 100px;border: 2px solid #ddd;border-radius: 2px;">
 
             <h1> Aprendizaje profundo <br> (con brain.js) </h1>
         </div>
