--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -97,14 +97,17 @@
 
     <body>
 
-        <div style="background: #505967;margin: 20px 0 100px;border: 2px solid #ddd;border-radius: 2px;">
+        <div style="background: #505967;margin: 20px 0 100px;border: 2px solid #ddd;border-radius: 10px;">
 
             <h1> Aprendizaje profundo <br> (con brain.js) </h1>
         </div>
 
-        <h2> Selecciona un color: </h2>
+        <div style="background: #505967;margin: 0 0 20px;border-radius: 10px;">
 
-        <input type="color" id="colorSelector">
+            <h2> Selecciona un color: </h2>
+
+            <input type="color" id="colorSelector">
+        </div>
 
         <div id="demo">
 
