--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -97,12 +97,12 @@
 
     <body>
 
-        <div style="background: #505967;margin: 20px 0 100px;border: 2px solid #ddd;border-radius: 10px;">
+        <div style="width: 90%;margin: 20px 0 100px;background: #505967;border-radius: 10px;">
 
             <h1> Aprendizaje profundo <br> (con brain.js) </h1>
         </div>
 
-        <div style="background: #505967;margin: 0 0 20px;border-radius: 10px;">
+        <div style="padding: 10px;margin: 0 0 20px;border: 2px solid #ddd;background: #505967;border-radius: 10px;">
 
             <h2> Selecciona un color: </h2>
 
