--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -86,11 +86,15 @@
 
             input[type="range"]{
                 display: none;
-                width: 25%;
+                width: 100%;
             }
 
             #demo{
-                width: 100%;
+                width: 30%;
+                padding: 10px;
+                border: #ddd;
+                background: #505967;
+                border-radius: 10px;
             }
         </style>
     </head>
