--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -92,7 +92,7 @@
             #demo{
                 width: 30%;
                 padding: 10px;
-                border: #ddd;
+                border: 2px solid #ddd;
                 background: #505967;
                 border-radius: 10px;
             }
