Minor style improvement

--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -92,7 +92,7 @@
             #demo{
                 width: 30%;
                 padding: 10px;
-                border: 2px solid #ddd;
+                border: 2px solid #fb9;
                 background: #505967;
                 border-radius: 10px;
             }
@@ -106,7 +106,7 @@
             <h1> Aprendizaje profundo <br> (con brain.js) </h1>
         </div>
 
-        <div style="padding: 10px;margin: 0 0 20px;border: 2px solid #ddd;background: #505967;border-radius: 10px;">
+        <div style="padding: 10px;margin: 0 0 20px;border: 2px solid #fb9;background: #505967;border-radius: 10px;">
 
             <h2> Selecciona un color: </h2>
 
