--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -85,11 +85,11 @@
             }
 
             input[type="range"]{
-                display: none;
                 width: 100%;
             }
 
             #demo{
+                display: none;
                 width: 30%;
                 padding: 10px;
                 border: 2px solid #fb9;
@@ -231,9 +231,7 @@
 
             darkBar.value = brightnessResult["dark"];
 
-            lightBar.style.display = "inline-block"
-
-            darkBar.style.display = "inline-block"
+            demo.style.display = "inline-block"
 
             // Se divide el resultado entre brillo y oscuridad para saber cuál es mayor
 
