--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -225,13 +225,36 @@
 
             const hexToRGB = (hex) => {
 
-                const r = parseInt(hex.slice(1, 3), 16);
+                let r = parseInt(hex.slice(1, 3), 16);
 
-                const g = parseInt(hex.slice(3, 5), 16);
+                let g = parseInt(hex.slice(3, 5), 16);
 
-                const b = parseInt(hex.slice(5, 7), 16);
+                let b = parseInt(hex.slice(5, 7), 16);
 
                 return [r, g, b];
+            }
+
+            // Se declara una función para crear los elementos necesarios que mostrarán la información
+
+            function createBars(id) {
+
+                let container = document.createElement("div");
+
+                container.setAttribute("class", "range_container");
+
+                let span = document.createElement("span");
+
+                let inputRange = document.createElement("input");
+
+                inputRange.setAttribute("type", "range");
+
+                inputRange.setAttribute("id", id);
+
+                demo.appendChild(container);
+
+                container.appendChild(span);
+
+                container.appendChild(inputRange);
             }
 
             // Se crea la variable colorResult para usarla más tarde
@@ -245,6 +268,12 @@
                 // Se borra la información por si se ejecutó anteriormente el código
 
                 demo.innerHTML = '';
+
+                // Re-creamos los elementos
+
+                createBars("dark_bar");
+
+                createBars("light_bar");
 
                 // Se declara una variable para conservar el código del color que se analizará
 
