--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -157,11 +157,11 @@
 
             const demo = document.getElementById("demo");
 
-            // Se declaran constantes para conservar las barras donde se mostrarán los resultados
+            // Se declaran variables para conservar las barras donde se mostrarán los resultados
 
-            const darkBar = document.getElementById("dark_bar");
+            darkBar = document.getElementById("dark_bar");
 
-            const lightBar = document.getElementById("light_bar");
+            lightBar = document.getElementById("light_bar");
 
             // Se construye una red neuronal para detectar el brillo
 
