--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -105,6 +105,11 @@
                 background: #505967;
                 border-radius: 10px;
             }
+
+            #demo p{
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
         </style>
     </head>
 
@@ -293,7 +298,7 @@
 
                 darkBar.value = brightnessResult["dark"] * 10;
 
-                demo.style.display = "inline-block"
+                demo.style.display = "inline-block";
 
                 // Se divide el resultado entre brillo y oscuridad para saber cuál es mayor
 
@@ -321,7 +326,7 @@
 
                     // Si no, se entrega el color a la IA de colores y se conserva el resultado
 
-                    colorResult = colorNN.run([color[0] / 255, color[1] / 255, color[2] / 255])
+                    colorResult = colorNN.run([color[0] / 255, color[1] / 255, color[2] / 255]);
 
                     // Se divide el resultado en colores y se conservan los valores
 
@@ -337,7 +342,7 @@
 
                         // ... Entonces, el brillo (y, por lo tanto, el color) es gris
 
-                        colorName = "Grey"
+                        colorName = "Grey";
                     } else {
 
                         // ... Si no, se categoriza el color con los valores
