--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -288,9 +288,9 @@
 
                 // Se re-crean los elementos y se muestran las barras con los resultados
 
-                createBars("Claridad", brightnessResult["light"] * 10);
+                createBars("Claridad: ", brightnessResult["light"] * 10);
 
-                createBars("Oscuridad", brightnessResult["dark"] * 10);
+                createBars("Oscuridad: ", brightnessResult["dark"] * 10);
 
                 demo.style.display = "inline-block";
 
