Style minor improvement

--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -93,6 +93,10 @@
                 height: 100%;
             }
 
+            label{
+                margin-right: 10px;
+            }
+
             input[type="range"]{
                 width: 100%;
             }
@@ -131,22 +135,7 @@
             <a id="to_work"> Siguiente </a>
         </div>
 
-        <div id="demo">
-
-            <div class="range_container">
-
-                <span></span>
-
-                <input type="range" id="dark_bar">
-            </div>
-
-            <div class="range_container">
-
-                <span></span>
-
-                <input type="range" id="light_bar">
-            </div>
-        </div>
+        <div id="demo"></div>
 
         <script>
 
