--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -79,10 +79,10 @@
             .range_container{
                 position: relative;
                 display: flex;
+                flex-wrap: wrap;
                 justify-content: center;
                 align-items: center;
                 width: 100%;
-                height: 25px;
             }
 
             .range_container span{
@@ -91,10 +91,6 @@
                 display: inline-block;
                 width: 100%;
                 height: 100%;
-            }
-
-            label{
-                margin-right: 10px;
             }
 
             input[type="range"]{
