--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -97,6 +97,13 @@
                 width: 100%;
             }
 
+            @media (max-width: 500px) {
+
+                #demo {
+                    width: 90%;
+                }
+            }
+
             #demo{
                 display: none;
                 width: 30%;
