Minor style improvement

--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -116,6 +116,10 @@
                    font-size: 1.5em; 
                 }
 
+                h2{
+                   font-size: 1.2em; 
+                }
+
                 #demo{
                     width: 90%;
                 }
