--- a/ia/index.html
+++ b/ia/index.html
@@ -348,6 +348,12 @@
                         // Se muestran los valores de los colores
 
                         demo.innerHTML += "<p> Rojo: " + redResult + "<br>" + "Verde: " + greenResult + "<br>" + "Azul: " + blueResult + "</p>";
+
+                        createBars("Rojo: ", redResult * 10);
+
+                        createBars("Verde: ", greenResult * 10);
+
+                        createBars("Azul: ", blueResult * 10);
                     }
                 }
 
