--- a/ia/index.html
+++ b/ia/index.html
@@ -9,7 +9,7 @@
 
         <meta name="color-scheme" content="dark">
 
-        <script src="artificial_intelligence/browser.js"></script>
+        <script src="ia/browser.js"></script>
 
         <title> Inteligencia Artificial </title>
 
