--- a/ia/index.html
+++ b/ia/index.html
@@ -151,7 +151,19 @@
 
         <div class="title_container">
 
-            <h1> Aprendizaje profundo <br> (con brain.js) </h1>
+            <h1> Aprendizaje profundo
+
+                <br>
+
+                (con
+
+                <a target="_blank" href="https://github.com/BrainJS/brain.js">
+
+                    brain.js
+                </a>
+
+                )
+            </h1>
         </div>
 
         <div class="input_container">
@@ -166,6 +178,11 @@
         </div>
 
         <div id="demo"></div>
+
+        <footer>
+
+            <a href="https://github.com/AlanIMorgan/tests" target="_blank"></a>
+        </footer>
 
         <script>
 
