--- a/ia/index.html
+++ b/ia/index.html
@@ -61,6 +61,11 @@
                 filter: drop-shadow(0px 0px 2px #000) drop-shadow(0px 0px 4px #baf);
             }
 
+            h1 a{
+                font-size: 1em;
+                color: #baf;
+            }
+
             h2{
                 font-size: 1.5em;
                 margin-bottom: 10px;
@@ -143,6 +148,24 @@
             #demo p{
                 overflow: hidden;
                 text-overflow: ellipsis;
+            }
+
+            footer{
+                display: inline-block;
+                width: 100%;
+            }
+
+            footer a{
+                display: inline-block;
+            }
+
+            footer a svg{
+                width: 50px;
+                fill: #ddd;
+                padding: 7px;
+                border-radius: 25px;
+                background: var(--bckgrnd);
+                cursor: pointer;
             }
         </style>
     </head>
