Minor style improvement

--- a/ia/index.html
+++ b/ia/index.html
@@ -153,10 +153,12 @@
             footer{
                 display: inline-block;
                 width: 100%;
+                margin-top: 100px;
             }
 
             footer a{
                 display: inline-block;
+                float: right;
             }
 
             footer a svg{
