--- a/ia/index.html
+++ b/ia/index.html
@@ -153,7 +153,7 @@
             footer{
                 display: inline-block;
                 width: 100%;
-                margin-top: 150px;
+                padding-top: 25vh;
             }
 
             footer a{
