--- a/ia/index.html
+++ b/ia/index.html
@@ -312,6 +312,8 @@
 
                 inputRange.setAttribute("type", "range");
 
+                inputRange.setAttribute("max", "10");
+
                 inputRange.setAttribute("value", value);
 
                 demo.appendChild(container);
