--- a/ia/index.html
+++ b/ia/index.html
@@ -293,7 +293,7 @@
 
             const brightnessNNFunc = runBrightnessNN(brightnessNNInputs);
 
-            console.log(run.runBrightnessNN()); // ¡Copia y pega! ¡No necesitas importar brain.js!
+            console.log(runBrightnessNN.runBrightnessNN()); // ¡Copia y pega! ¡No necesitas importar brain.js!
 
             // Se declara una función para convertir el formato de color hexadecimal en RGB
 
