--- a/ia/index.html
+++ b/ia/index.html
@@ -16,7 +16,7 @@
         <style>
 
             :root{
-                --bckgrnd: #404757;
+                --bckgrnd: #505767;
             }
 
             *{
@@ -50,7 +50,7 @@
             .title_container{
                 width: 90%;
                 margin-bottom: 100px;
-                background: var(--bckgrnd);
+                background: #404757;
                 border-radius: 10px;
             }
 
