--- a/ia/index.html
+++ b/ia/index.html
@@ -293,9 +293,9 @@
 
             const runColorNN = colorNN.toFunction();
 
-            const brightnessNNFunc = runBrightnessNN(brightnessNNInputs);
+            const brightnessNNFunc = runBrightnessNN("#0000bb");
 
-            const colorNNFunc = runColorNN(brightnessNNInputs);
+            const colorNNFunc = runColorNN("#0000bb");
 
             console.log(runBrightnessNN.toString());
 
